--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ include_directories(SYSTEM ${MPI_INCLUDE_PATH})
 OPTION(RUN_TESTS "Compile and run tests" ON)
 OPTION(USE_TCMALLOC "Replace builtin malloc with TCMalloc" OFF)
 OPTION(USE_PROFILER "Use TCMalloc profiler (requires TCMalloc)" OFF)
-OPTION(USE_GUROBI "Use Gurobi for ILP Solving in multiterminal cut" OFF)
+OPTION(USE_GUROBI "Use Gurobi for ILP Solving in multiterminal cut" ON)
 
 if (USE_TCMALLOC)
     find_package(Tcmalloc REQUIRED)
